[gd_scene load_steps=12 format=3 uid="uid://byxw46rih2qg"]

[ext_resource type="Script" uid="uid://bbri3bj2601ag" path="res://scripts/ui/pvpmenu.gd" id="1_0lfjd"]
[ext_resource type="Texture2D" uid="uid://cul1v7ey8hgtp" path="res://assets/sprites/UI_TravelBook_BookCover01a.png" id="2_7ogfn"]
[ext_resource type="FontFile" uid="uid://c4ht708w1wbb1" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_tmexu"]
[ext_resource type="FontFile" uid="uid://mcoukv50aceg" path="res://assets/fonts/PixelOperator8.ttf" id="4_6ayv8"]
[ext_resource type="Texture2D" uid="uid://yyx6kv163jb8" path="res://assets/sprites/UI_TravelBook_FrameSelect01a.png" id="5_rbm3k"]
[ext_resource type="Texture2D" uid="uid://dpki0xsx23s2w" path="res://assets/sprites/UI_TravelBook_Frame01a.png" id="6_anjl0"]
[ext_resource type="Texture2D" uid="uid://csfbf4q2acpl1" path="res://assets/sprites/UI_TravelBook_FrameSelect01b.png" id="7_rc3uc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2npym"]
texture = ExtResource("5_rbm3k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8nku8"]
texture = ExtResource("6_anjl0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4i5mc"]
texture = ExtResource("7_rc3uc")

[sub_resource type="Theme" id="Theme_uspax"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0lfjd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7ogfn")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = 451.0
grow_horizontal = 2
theme_override_constants/separation = 25

[node name="Player1" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tmexu")
theme_override_font_sizes/font_size = 48
text = "Player 1 Deck:"
vertical_alignment = 1

[node name="DeckStatus1" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tmexu")
theme_override_font_sizes/font_size = 28
text = "Not Loaded"
vertical_alignment = 1

[node name="Load1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.2484, 0.2484, 0.2484, 1)
theme_override_fonts/font = ExtResource("4_6ayv8")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxTexture_2npym")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8nku8")
theme_override_styles/normal = SubResource("StyleBoxTexture_4i5mc")
text = "Load Deck"
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 2
offset_left = 470.0
offset_top = 179.0
offset_right = 1370.0
offset_bottom = 389.0
mouse_filter = 0
theme = SubResource("Theme_uspax")

[node name="Binder" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
theme_override_constants/separation = 160

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -400.0
offset_right = -100.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 25

[node name="Player2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tmexu")
theme_override_font_sizes/font_size = 48
text = "Player 2 Deck:"
vertical_alignment = 1

[node name="DeckStatus2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tmexu")
theme_override_font_sizes/font_size = 28
text = "Not Loaded"
vertical_alignment = 1

[node name="Load2" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.2484, 0.2484, 0.2484, 1)
theme_override_fonts/font = ExtResource("4_6ayv8")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxTexture_2npym")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8nku8")
theme_override_styles/normal = SubResource("StyleBoxTexture_4i5mc")
text = "Load Deck"
expand_icon = true

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 470.0
offset_top = 629.0
offset_right = 1370.0
offset_bottom = 839.0
mouse_filter = 0
theme = SubResource("Theme_uspax")

[node name="Binder2" type="HBoxContainer" parent="ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
theme_override_constants/separation = 160

[node name="Start" type="Button" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -25.0
offset_right = -100.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.2484, 0.2484, 0.2484, 1)
theme_override_fonts/font = ExtResource("4_6ayv8")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxTexture_2npym")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8nku8")
theme_override_styles/normal = SubResource("StyleBoxTexture_4i5mc")
text = "Start"
expand_icon = true

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1500.0
offset_top = 338.0
offset_right = -1200.0
offset_bottom = 388.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.2484, 0.2484, 0.2484, 1)
theme_override_fonts/font = ExtResource("4_6ayv8")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxTexture_2npym")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8nku8")
theme_override_styles/normal = SubResource("StyleBoxTexture_4i5mc")
text = "Back"
expand_icon = true

[node name="FileDialog1" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "res://user/saved_decks"
filters = PackedStringArray("*.json;JSON Deck Files")

[node name="FileDialog2" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "res://user/saved_decks"
filters = PackedStringArray("*.json;JSON Deck Files")
